working poor man walletconnect v2 on bera

--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 <body>
   <div id="app">
     <button id="open-connect-modal">Open Wallet Modal</button>
-    
     <p id="wallet-address"></p>
-    
-    <p id="user-balance"></p>
+    <button id="get-balance" disabled>Get Token Balance</button>
+    <p id="user-balance">Token Balance: -</p>
+    <button id="transfer-token" disabled>Transfer Token</button>
   </div>
 
+
+  
   <script type="module" src="./src/main.js"></script>
 </body>
 </html>
